[package]
name = "rcui"
version = "0.1.0"
authors = ["rexim <reximkut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
[target.'cfg(unix)'.dependencies]
ncurses = { version = "5.99.0", features = ["wide"] }
[target.'cfg(windows)'.dependencies]
pdcurses = { git = "https://github.com/et342/pdcurses-rs", features = ["ncurses_compat"] }